tests/paczka1/fuzzy1/50415970.err
Error in line 10: cidFZ63pys S697 75,0
Error in line 5: U1jRq S515 26,8
Error in line 12: cidFZ63pys S515 37,3
Error in line 14: EB43BH A944 61,9
Error in line 31: EB43BH S515 96,9
Error in line 30: cidFZ63pys S407 22,3
